<resources>
    <string name="app_name">新股网下配售</string>
    <string name="ipo_today">今日新股</string>
    <string name="ipo_list">所有新股</string>
    <string name="my_ipo">我的新股</string>
    <string name="NOTICE">招股公告</string>
    <string name="INQUIRY">询价</string>
    <string name="ROADSHOW">路演</string>
    <string name="ANNOUNCE">发行公告</string>
    <string name="OFFLINE">网下发行</string>
    <string name="ONLINE">申购</string>
    <string name="SUCCESS_RATE">发布中签率</string>
    <string name="SUCCESS_RESULT">发布中签结果</string>
    <string name="PAYMENT">缴款日</string>
    <string name="LISTED">上市</string>

    <string name="today">今天</string>
    <string name="show_all">显示全部事件</string>
    <string name="show_only_related">网下申购相关</string>

    <string name="no_offline">不参与网下发行</string>
    <string name="have_listed">已上市</string>
    <string name="wait_listed">待上市</string>
    <string name="no_work_today">今日无事</string>
    <string name="today_task">今日任务</string>
    <string name="next_step">下一步</string>
    <string name="issue_price">发行价</string>
    <string name="stock_number">每人获配</string>
    <string name="stock">股</string>
    <string name="yuan">元</string>
    <string name="none">&#160;&#160;&#160;&#160;-</string>
    <string name="space">&#160;&#160;</string>


    <string name="add_user">添加投资者</string>
    <string name="my_profit">我的收益</string>
    <string name="user_management">用户管理</string>
    <string name="check_update">检查更新</string>
    <string name="about">关于</string>
    <string name="settings">设置</string>

    <string name="export_database">导出至手机</string>
    <string name="import_database">从手机导入</string>
    <string name="export_warning">导出文件将覆盖本地保存文件！</string>
    <string name="import_warning">从文件导入后，APP内数据将会被全部覆盖！</string>

    <string name="save">保存</string>

    <string name="select_number">参与申购人数</string>
    <string name="cancel_applied">删除该股申购数据？</string>

    <string name="yes">确定</string>
    <string name="no">取消</string>

    <string name="has_submit">已参与</string>

    <string name="list_date">上市日期</string>
    <string name="ipo_info">配售信息</string>
    <string name="stock_amount">配售股数</string>
    <string name="benefit">收益</string>
    <string name="my_benefit">我的收益</string>
    <string name="sold_price">卖出价格</string>
    <string name="sold_date">卖出日期</string>
    <string name="benefit_list">收益详情</string>
    <string name="should_pay">应缴金额</string>

    <string name="no_sold_date">笔收益未登记售出日期</string>
    <string name="no_benefit">分文未赚</string>

    <string name="export_suc">新股数据成功导出至\"/手机存储</string>
    <string name="export_fail">导出失败!请检查App存储权限！</string>

    <string name="import_suc">新股数据导入成功！</string>
    <string name="import_fail">导入失败!请确认目录文件名为\"/手机存储</string>

    <string name="payment_notification">股票代码#CODE#, 缴款￥#MONEY#元</string>

    <string name="info_notice">信息公告</string>
    <string name="please_select">请选择</string>

    <string name="start_checking_update">开始检查更新</string>
    <string name="error_retry">更新遇到错误，请重试！</string>
    <string name="already_latest_version">当前已是最新版本</string>
    <string name="download_new_version">新版发布</string>
    <string name="version_number">版本号：</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="update">更新</string>
    <string name="start_download">开始下载</string>
    <string name="downloading">下载中</string>
    <string name="download_fail">下载失败</string>
    <string name="download_success">下载成功</string>

    <string name="manually_grant"></string>

    <string name="by_month">按月</string>
    <string name="by_year">按年</string>

    <string name="menu_search">搜索</string>
    <string name="search_hint">输入股票名称或代码</string>

</resources>
