<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/ipo_today_event_horizontal_padding"
    android:paddingTop="@dimen/ipo_today_event_vertical_padding"
    android:paddingRight="@dimen/ipo_today_event_horizontal_padding"
    android:paddingBottom="@dimen/ipo_today_event_vertical_padding">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adapter_ipo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/ipo_today_name_code_margin"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ipo_today_ipo_title_font_size" />

            <TextView
                android:id="@+id/adapter_ipo_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ipo_today_ipo_title_font_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/adapter_ipo_price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ipo_today_vertical_gap"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adapter_ipo_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/ipo_today_horizontal_gap"
                android:text="@string/issue_price"
                android:textSize="@dimen/ipo_today_ipo_small_font_size" />

            <TextView
                android:id="@+id/adapter_ipo_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/ipo_today_ipo_small_font_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/adapter_ipo_stock_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ipo_today_vertical_gap"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adapter_ipo_stock_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/ipo_today_horizontal_gap"
                android:text="@string/stock_number"
                android:textSize="@dimen/ipo_today_ipo_small_font_size" />

            <TextView
                android:id="@+id/adapter_ipo_stock_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/ipo_today_ipo_small_font_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/adapter_ipo_benefit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ipo_today_vertical_gap"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adapter_ipo_benefit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/ipo_today_horizontal_gap"
                android:text="@string/benefit"
                android:textSize="@dimen/ipo_today_ipo_small_font_size" />

            <TextView
                android:id="@+id/adapter_ipo_benefit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/ipo_today_ipo_small_font_size" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/adapter_action_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/adapter_action_image"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_add"
            android:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/adapter_action_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/has_submit"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/ipo_today_button_font_size"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
