<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_grey"
    tools:context="cn.ryanman.app.offlineipo.main.MyIpoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/my_ipo_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/fragment_my_ipo_title_vertical_padding"
            android:paddingTop="@dimen/fragment_my_ipo_title_vertical_padding">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_user_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/my_ipo"
                android:textColor="@android:color/black"
                android:textSize="@dimen/fragment_my_ipo_title_font" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/my_ipo_profit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/fragment_my_ipo_title_vertical_padding"
            android:paddingTop="@dimen/fragment_my_ipo_title_vertical_padding">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_user_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/my_profit"
                android:textColor="@android:color/black"
                android:textSize="@dimen/fragment_my_ipo_title_font" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/my_ipo_check_update_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/fragment_my_ipo_title_vertical_padding"
            android:paddingTop="@dimen/fragment_my_ipo_title_vertical_padding">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_user_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/check_update"
                android:textColor="@android:color/black"
                android:textSize="@dimen/fragment_my_ipo_title_font" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/my_ipo_about_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/fragment_my_ipo_title_vertical_padding"
            android:paddingTop="@dimen/fragment_my_ipo_title_vertical_padding">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_user_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/about"
                android:textColor="@android:color/black"
                android:textSize="@dimen/fragment_my_ipo_title_font" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>