<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_management"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="35dp"
    android:paddingRight="30dp"
    android:paddingBottom="35dp"
    tools:context="cn.ryanman.app.offlineipo.main.IpoDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_ipo_detail_margin_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ipo_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="利群股份"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/activity_ipo_detail_title_font"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ipo_detail_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="601366"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/activity_ipo_detail_title_font" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ipo_detail_price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_ipo_detail_margin_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ipo_detail_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:text="@string/issue_price"
            android:textSize="@dimen/activity_ipo_detail_font" />

        <TextView
            android:id="@+id/ipo_detail_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥12.00"
            android:textSize="@dimen/activity_ipo_detail_font" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ipo_detail_list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:text="@string/list_date"
            android:textSize="@dimen/activity_ipo_detail_font" />

        <TextView
            android:id="@+id/ipo_detail_listed_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2017-01-12"
            android:textSize="@dimen/activity_ipo_detail_font" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ipo_detail_subscription_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ipo_detail_payment_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ipo_detail_person_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:text="@string/ipo_info"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/activity_ipo_detail_title_font" />

                <ImageButton
                    android:id="@+id/ipo_detail_weixin_button"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_wechat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ipo_detail_stock_number"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="number"
                    android:textSize="@dimen/activity_ipo_detail_font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/stock"
                    android:textSize="@dimen/activity_ipo_detail_font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="应缴款 ￥"
                    android:textSize="@dimen/activity_ipo_detail_font" />

                <TextView
                    android:id="@+id/ipo_detail_payment_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="0.00"
                    android:textSize="@dimen/activity_ipo_detail_font" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="x"
                    android:textSize="@dimen/activity_ipo_detail_font" />

                <TextView
                    android:id="@+id/ipo_detail_person_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/activity_ipo_detail_font" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/benefit"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/activity_ipo_detail_title_font" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="￥"
                    android:textSize="@dimen/activity_ipo_detail_font" />

                <EditText
                    android:id="@+id/ipo_detail_earn_amount"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/activity_ipo_detail_font" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/sold_date"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/activity_ipo_detail_title_font" />

            <TextView
                android:id="@+id/ipo_detail_sold_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2017-03-02"
                android:textSize="@dimen/activity_ipo_detail_font" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>